# SaaSGuard

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  Dockerfile.dbt  Dockerfile.mkdocs  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  railway.toml  render.yaml  sitemap.xml
.dvc/: .gitignore  config
.github/ISSUE_TEMPLATE/: adr.md  config.yml  user_story.md
.github/workflows/: benchmarks.yml  ci.yml  data-pipeline.yml  docs.yml  drift-monitor.yml
.zen/: stack_setup.sh  stack_setup_remote.sh
ADR/ADR-001-duckdb-over-postgres/: index.html
ADR/ADR-002-ddd-architecture/: index.html
ADR/ADR-003-render-deployment/: index.html
ADR/ADR-004-drift-detection/: index.html
API/: index.html
CHANGELOG/: index.html
DVC/: dvc.yaml
api-reference/: index.html
api-reference/ai-summary/: index.html
api-reference/customer/: index.html
api-reference/expansion/: index.html
api-reference/gtm/: index.html
api-reference/infrastructure/: index.html
api-reference/prediction/: index.html
api-reference/usage/: index.html
api-reference/use-cases/: index.html
app/: dependencies.py  main.py
app/routers/: customers.py  expansion_summary.py  predictions.py  summaries.py
app/schemas/: customer.py  expansion_summary.py  prediction.py  summary.py
architecture/: index.html
benchmarks/: index.html
change-management/: index.html
dashboard-guide/: index.html
data-generation/: index.html
data_dictionary/: index.html
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: mart_customer_churn_features.sql  mart_customer_expansion_features.sql  mart_customer_risk_scores.sql  mart_propensity_quadrant.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_expansion_outreach.sql  stg_gtm_opportunities.sql  stg_risk_signals.sql  stg_support_tickets.sql  stg_usage_events.sql
demo/: index.html
docs/: API.md  CHANGELOG.md  architecture.md  benchmarks.md  change-management.md  dashboard-guide.md  data-generation.md  data_dictionary.md  demo.md  economic-model.md  eda-findings.md  ethical-guardrails.md  expansion-model-card.md  expansion-propensity-methodology.md  experiment-design.md  getting-started.md  growth-framework.md  index.md  llm-time-saved.md  model-card.md  model-design.md  one-pager.md  prd.md  roi-calculator.md  runbook.md  shap-analysis.md  stakeholder-notes.md  tickets.md
docs/ADR/: ADR-001-duckdb-over-postgres.md  ADR-002-ddd-architecture.md  ADR-003-render-deployment.md  ADR-004-drift-detection.md
docs/api-reference/: ai-summary.md  customer.md  expansion.md  gtm.md  index.md  infrastructure.md  prediction.md  usage.md  use-cases.md
docs/presentation/: deck.md  speaker-notes.md  video-script.md
economic-model/: index.html
eda-findings/: index.html
ethical-guardrails/: index.html
expansion-model-card/: index.html
expansion-propensity-methodology/: index.html
experiment-design/: index.html
getting-started/: index.html
growth-framework/: index.html
llm-time-saved/: index.html
model-card/: index.html
model-design/: index.html
notebooks/: bayesian_ab_test_simulation.ipynb  churn_model_training_and_calibration.ipynb  cohort_analysis_and_retention_curves.ipynb  expansion_propensity_modeling.ipynb  phase3_01_eda_cohort_analysis.ipynb  phase3_02_survival_analysis.ipynb  phase4_01_model_training.ipynb  phase5_01_llm_summaries.ipynb  survival_analysis_and_time_to_churn.ipynb
one-pager/: index.html
pipelines/: churn_inference_pipeline.py  churn_training_pipeline.py  data_pipeline.py  drift_monitoring_pipeline.py
prd/: index.html
roi-calculator/: index.html
runbook/: index.html
scripts/: create_issues.sh  generate_benchmarks_md.py  github_setup.sh  run_dbt_models.py
search/: search_index.json
shap-analysis/: index.html
skills/: README.md
skills/commit-and-close/: SKILL.md
skills/data-contract/: SKILL.md
skills/ddd-entity/: SKILL.md
skills/docker-harden/: SKILL.md
skills/dvc-version/: SKILL.md
skills/exec-story/: SKILL.md
skills/mkdocs-autoupdate/: SKILL.md
skills/phase-advance/: SKILL.md
skills/self-critique/: SKILL.md
skills/tdd-cycle/: SKILL.md
src/application/use_cases/: __init__.py  ask_customer_question.py  compute_risk_score.py  generate_executive_summary.py  generate_expansion_summary.py  get_customer_360.py  predict_churn.py  predict_expansion.py
src/domain/ai_summary/: __init__.py  entities.py  expansion_guardrails_service.py  guardrails_service.py  summary_port.py
stakeholder-notes/: index.html
steps/: churn_inference_steps.py  churn_training_steps.py  data_steps.py  drift_monitoring_steps.py  model_promotion_step.py
superset/: init_dashboards.py  superset_config.py
superset/dashboards/: README.md
superset/docker/: superset-init.sh
tests/: conftest.py
tests/e2e/: test_api_endpoints.py  test_production_scenarios.py  test_summary_endpoints.py
tests/integration/: test_data_contracts.py  test_data_generation.py  test_duckdb_adapter.py  test_expansion_data_contracts.py  test_groq_summary_service.py  test_model_inference.py
tests/model_accuracy/: test_churn_model.py  test_feature_signal.py
tests/performance/: __init__.py  locustfile.py
tickets/: index.html
(+69 files in other folders)
